--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>openwebbeans-el22</artifactId>
             <version>${owb.version}</version>
         </dependency>
+        <!-- <dependency>
+		    <groupId>org.jboss.weld.servlet</groupId>
+		    <artifactId>weld-servlet-core</artifactId>
+		    <version>3.1.2.Final</version>
+		</dependency>-->
     </dependencies>
     
     <repositories>
