--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,11 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Production</param-value>
     </context-param>
+    
+<!-- 	<context-param> -->
+<!-- 		<param-name>javax.faces.FACELETS_LIBRARIES</param-name> -->
+<!-- 		<param-value>/WEB-INF/taglib/wt.taglib.xml</param-value> -->
+<!-- 	</context-param> -->
 
     <context-param>
         <param-name>primefaces.THEME</param-name>
@@ -97,4 +102,10 @@
     <welcome-file-list>
         <welcome-file>test.xhtml</welcome-file>
     </welcome-file-list>
+    
+	<!--  ERROR PAGES -->
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error.xhtml</location>
+	</error-page>
 </web-app>
